<?php

namespace App\WebSocket\Security\Contracts;

/**
 * Интерфейс для авторизации доступа к каналам WebSocket.
 *
 * Этот интерфейс определяет метод для проверки разрешений клиента на доступ
 * к указанному каналу. Реализация данного интерфейса должна обеспечить
 * проверку прав клиента на подписку или взаимодействие с каналом.
 *
 * @package App\WebSocket\Security\Contracts
 * @author Smetanin Sergey
 * @version 1.0.0
 * @since 1.0.0
 */
interface AuthorizerInterface
{
    /**
     * Проверяет, имеет ли клиент доступ к указанному каналу.
     *
     * Этот метод используется для определения, может ли клиент с указанным
     * идентификатором получить доступ к данному каналу. Он должен вернуть
     * true, если доступ разрешен, и false, если доступ запрещен.
     *
     * @param string $channelName Имя канала, к которому клиент пытается получить доступ.
     * @param string $clientId Уникальный идентификатор клиента, который пытается получить доступ к каналу.
     *
     * @return bool Возвращает true, если доступ к каналу разрешен для указанного клиента, иначе false.
     */
    public function authorize(string $channelName, string $clientId): bool;
}
